--- a/packages/composer.json
+++ b/packages/composer.json
@@ -12,7 +12,7 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.0"
+        "phpunit/phpunit": "~5.7"
     },
     "autoload": {
         "classmap": [
@@ -20,8 +20,12 @@
         ],
         "psr-4": {
             "App\\": "app/",
-            "Tests\\": "tests/",
-            "SaasTest\\BugSnapper\\": "packages/packages/saastest/bugsnapper/src"
+            "SaasTest\\BugSnapper\\": "packages/saastest/bugsnapper/src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
     },
     "scripts": {
